--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script type="module" src="/main.js"></script>
     <video id="video" loop muted crossOrigin="anonymous" playsinline style="display:none">
-        <source src="./public/videos/720 gradient BG.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+        <source src="./public/videos/bg_bubbles.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
     </video>
 </body>
 
