--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pepsi DESAF-IA</DESAF-IA></title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <script type="module" src="/main.js"></script>
-    <video id="video" loop muted crossOrigin="anonymous" playsinline style="display:none">
+    <video id="video" loop muted crossOrigin="anonymous" playsinline >
         <source src="./public/videos/gradientBG.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
     </video>
 </body>
