--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <script type="module" src="/main.js"></script>
     <video id="video" loop muted crossOrigin="anonymous" playsinline>
-        <source src="./public/videos/fondo2.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+        <source src="./public/videos/negro.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
     </video>
 </body>
 
